email alerts modification

--- a/views/email/responsiveAlert.jade
+++ b/views/email/responsiveAlert.jade
@@ -6,5 +6,8 @@ html
     p Your site #{site.url} is currently taking longer time to respond. The current average response time is #{responsiveness} ms. 
     p You have set your threshold to be at #{site.responsiveness} ms.
     p
+    p If at any point of time, you wish to not receive these alerts, you can opt-out by editing your check <a href="http://www.pingjs.com/sites">here</a> 
+    p and leaving  the responsive threshold value empty.
+    p
     p Thank you,
     p Pingjs
