changes from pingjs.com to pingjs.in

--- a/views/email/responsiveAlert.jade
+++ b/views/email/responsiveAlert.jade
@@ -1,12 +1,12 @@
 html
   body
-    img(src='http://pingjs.com/img/logo_50h.png', alt='Pingjs Logo', title='Pingjs Logo', style='height:50px;')
+    img(src='http://pingjs.in/img/logo_50h.png', alt='Pingjs Logo', title='Pingjs Logo', style='height:50px;')
     p Hi #{user.firstName} #{user.lastName},
     br
     p Your site #{site.url} is currently taking longer time to respond. The current average response time is #{responsiveness} ms. 
     p You have set your threshold to be at #{site.responsiveness} ms.
     p
-    p If at any point of time, you wish to not receive these alerts, you can opt-out by editing your check <a href="http://www.pingjs.com/sites">here</a> and leaving  the responsive threshold value empty.
+    p If at any point of time, you wish to not receive these alerts, you can opt-out by editing your check <a href="http://www.pingjs.in/sites">here</a> and leaving  the responsive threshold value empty.
     p
     p Thank you,
     p Pingjs
