--- a/views/email/statusChange.jade
+++ b/views/email/statusChange.jade
@@ -1,6 +1,6 @@
 html
   body
-    img(src='http://pingjs.com/img/logo_50h.png', alt='Pingjs Logo', title='Pingjs Logo', style='height:50px;')
+    img(src='http://pingjs.in/img/logo_50h.png', alt='Pingjs Logo', title='Pingjs Logo', style='height:50px;')
     p Hi #{user.firstName} #{user.lastName},
     br
     p Your site #{site.url} is currently #{site.last_status}.
